Work in progress in Hope page

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solid - Tailwind CSS Saas Template</title>
+    <title>Fort Remote Services</title>
   </head>
   <body
     x-data="{ page: 'home', 'darkMode': true, 'stickyMenu': false, 'navigationOpen': false, 'scrollTop': false }"
@@ -27,13 +27,13 @@
         <div class="mx-auto max-w-c-1390 px-4 md:px-8 2xl:px-0">
           <div class="flex lg:items-center lg:gap-8 xl:gap-32.5">
             <div class="animate_left md:w-1/2">
-              <h4 class="text-black dark:text-white text-lg font-medium mb-4.5">🔥 Solid is one of the best option for you.</h4>
+              <h4 class="text-black dark:text-white text-lg font-medium mb-4.5">🔥 Fort services is the best option for you.</h4>
               <h1 class="text-black dark:text-white text-3xl xl:text-hero font-bold mb-5">
-                Complete Tailwind CSS
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Template</span>
-                for SaaS Website
+                Unlock Efficiency and
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Prosperity</span>
+               with Fort Remote Business Solutions
               </h1>
-              <p>Solid is a complete Tailwind CSS template crafted specially for SaaS, Software Mobile App and Web App Sites.</p>
+              <p>Empower Your Business with Expert Remote Services – Let Us Handle the Details, While You Focus on Growth!</p>
 
               <div class="mt-10">
                 <form action="https://formbold.com/s/unique_form_id" method="POST">
@@ -105,7 +105,7 @@
           <!-- Section Title Start -->
           <div
             class="animate_top text-center mx-auto"
-            x-data="{ sectionTitle: `SAAS FEATURES`, sectionSubtitle: `Our Software's Core Features`, sectionTitlePara: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor eros. Donec vitae tortor lacus. Phasellus aliquam ante in maximus.`}"
+            x-data="{ sectionTitle: `OUR SERVICES`, sectionSubtitle: `Our Services' Core Features`, sectionTitlePara: `Discover how Your Remote Business Solutions can optimize your operations with our specialized services`}"
           >
             <include src="./partials/section-title.html" />
           </div>
@@ -117,8 +117,8 @@
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-01.svg" alt="Icon" />
               </div>
-              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Crafted for SaaS</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Bookkeeping Services</h3>
+              <p>Ensure financial accuracy and compliance while you focus on growth.</p>
             </div>
             <!-- Features item End -->
 
@@ -127,8 +127,8 @@
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-02.svg" alt="Icon" />
               </div>
-              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">High-quality Design</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Data Entry Services</h3>
+              <p>Seamlessly manage your data, reduce errors, and save valuable time.</p>
             </div>
             <!-- Features item End -->
 
@@ -137,39 +137,39 @@
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-03.svg" alt="Icon" />
               </div>
-              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">All Essential Sections</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
+              <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Virtual Customer care</h3>
+              <p>Provide exceptional support with our professional team, covering email, chat, and phone channels.</p>
             </div>
             <!-- Features item End -->
 
             <!-- Features item Start -->
-            <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
+            <!--<div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-04.svg" alt="Icon" />
               </div>
               <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Speed Optimized</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
-            </div>
+            </div>-->
             <!-- Features item End -->
 
             <!-- Features item Start -->
-            <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
+            <!--<div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-05.svg" alt="Icon" />
               </div>
               <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Fully Customizable</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
-            </div>
+            </div>-->
             <!-- Features item End -->
 
             <!-- Features item Start -->
-            <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
+           <!-- <div class="animate_top border border-white shadow-solid-3 rounded-lg p-7.5 xl:p-12.5 transition-all hover:shadow-solid-4 dark:hover:bg-hoverdark dark:border-strokedark dark:bg-blacksection">
               <div class="flex items-center justify-center rounded-[4px] bg-primary w-16 h-16">
                 <img src="./images/icon/icon-06.svg" alt="Icon" />
               </div>
               <h3 class="font-semibold text-xl xl:text-itemtitle text-black dark:text-white mt-7.5 mb-5">Regular Updates</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor.</p>
-            </div>
+            </div>-->
             <!-- Features item End -->
           </div>
         </div>
@@ -186,21 +186,21 @@
             </div>
             <div class="animate_right md:w-1/2">
               <h4 class="text-black dark:text-white font-medium uppercase">
-                <a href="#" class="bg-meta text-white text-metatitle inline-flex rounded-full py-1 px-4.5 mr-4 mb-4">New</a> start tracking visitors
+                <a href="#" class="bg-meta text-white text-metatitle inline-flex rounded-full py-1 px-4.5 mr-4 mb-4">New</a> Start tracking your success journey today
               </h4>
               <h2 class="relative font-bold text-black dark:text-white text-3xl xl:text-hero mb-6">
                 Know More About Our
-                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Product.</span>
+                <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Services.</span>
               </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies lacus non fermentum ultrices. Fusce consectetur le.</p>
+              <p>Dive deeper into the world of Your Remote Business Solutions and discover how our services can transform your business. </p>
 
               <div class="mt-7.5 flex items-center gap-5">
                 <div class="w-15 h-15 rounded-[50%] border border-stroke dark:border-strokedark dark:bg-blacksection flex items-center justify-center">
                   <p class="text-black dark:text-white font-semibold text-metatitle2">01</p>
                 </div>
                 <div class="w-3/4">
-                  <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Lorem ipsum dolor.</h5>
-                  <p>Ut ultricies lacus non fermentum ultrices.</p>
+                  <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Exceeding Expectations.</h5>
+                  <p>Discover how we optimize your operations for peak efficiency.</p>
                 </div>
               </div>
               <div class="mt-7.5 flex items-center gap-5">
@@ -208,8 +208,8 @@
                   <p class="text-black dark:text-white font-semibold text-metatitle2">02</p>
                 </div>
                 <div class="w-3/4">
-                  <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Fusce consectetur le.</h5>
-                  <p>consectetur adipiscing elit fermentum ultricies.</p>
+                  <h5 class="text-black dark:text-white text-metatitle2 mb-0.5">Tailored to Your Needs</h5>
+                  <p>Explore how we deliver exceptional customer care experiences</p>
                 </div>
               </div>
             </div>
@@ -228,7 +228,7 @@
                 Track Your Audience
                 <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg2 dark:before:bg-titlebgdark before:-z-1">Activities</span>
               </h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies lacus non fermentum ultrices. Fusce consectetur le.</p>
+              <p>Gain Insights, Track Engagement, and Improve Customer Interactions with Our Audience Activity Monitoring Services.</p>
 
               <a href="#" class="flex items-center gap-2.5 text-black dark:text-white mt-7.5">
                 Know More
