Work in progress in Hope page

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <span class="inline-block relative before:absolute before:bottom-2.5 before:left-0 before:w-full before:h-3 before:bg-titlebg dark:before:bg-titlebgdark before:-z-1">Prosperity</span>
                with Fort Remote Business Solutions
               </h1>
-              <p>Empower Your Business with Expert Remote Services – Let Us Handle the Details, While You Focus on Growth!</p>
+              <p>Unlock Efficiency, Accuracy, and Excellence – Your All-in-One Hub for Remote Business Support Services!</p>
 
               <div class="mt-10">
                 <form action="https://formbold.com/s/unique_form_id" method="POST">
@@ -105,7 +105,7 @@
           <!-- Section Title Start -->
           <div
             class="animate_top text-center mx-auto"
-            x-data="{ sectionTitle: `OUR SERVICES`, sectionSubtitle: `Our Services' Core Features`, sectionTitlePara: `Discover how Your Remote Business Solutions can optimize your operations with our specialized services`}"
+            x-data="{ sectionTitle: `OUR SERVICES`, sectionSubtitle: `Our Services Core Features`, sectionTitlePara: `Discover how Your Remote Business Solutions can optimize your operations with our specialized services`}"
           >
             <include src="./partials/section-title.html" />
           </div>
@@ -269,7 +269,7 @@
                 <p class="text-black dark:text-white font-medium text-metatitle3">01</p>
               </div>
               <div class="lg:w-auto md:w-3/5">
-                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium">Clean User Interface</h5>
+                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium">Bookkeeping Services</h5>
               </div>
             </div>
             <div
@@ -281,7 +281,7 @@
                 <p class="text-black dark:text-white font-medium text-metatitle3">02</p>
               </div>
               <div class="lg:w-auto md:w-3/5">
-                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium">Cloud Data Save Options</h5>
+                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium">Virtual Customer Care Services</h5>
               </div>
             </div>
             <div
@@ -293,7 +293,7 @@
                 <p class="text-black dark:text-white font-medium text-metatitle3">03</p>
               </div>
               <div class="lg:w-auto md:w-3/5">
-                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium">Management And Collaboration</h5>
+                <h5 class="text-black dark:text-white text-sm xl:text-regular font-medium"> Data Entry Services:</h5>
               </div>
             </div>
           </div>
@@ -304,9 +304,14 @@
             <div x-show="featuresTab === 'tabOne'">
               <div class="flex items-center gap-8 lg:gap-19">
                 <div class="md:w-1/2">
-                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Solid Has Neat & Clean User Interface.</h2>
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies lacus non fermentum ultrices. Fusce consectetur le.</p>
-                  <p class="w-11/12">Nam id eleifend dui, id iaculis purus. Etiam lobortis neque nec finibus sagittis. Nulla ligula nunc egestas ut.</p>
+                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Efficient, Accurate, and Convenient Remote Bookkeeping.</h2>
+                  <ul class="mb-5">
+                    <li class="w-11/12">Journal Entry and General Ledger Maintenance</li>
+                    <li class="w-11/12">Generating &  Recording Sales Invoices</li>
+                    <li class="w-11/12">Updating Deposits & Payments in the Cashbook</li>
+                    <li>Expense Tracking: We streamline expense tracking, making it easy to monitor and control costs.</li>
+                    <li>Accounts Receivable Management</li>
+                  </ul>
                 </div>
                 <div class="hidden md:block md:w-1/2">
                   <img src="./images/features/features-light-01.svg" alt="Features" class="dark:hidden" />
@@ -567,7 +572,7 @@
           <!-- Section Title Start -->
           <div
             class="animate_top text-center mx-auto"
-            x-data="{ sectionTitle: `TESTIMONIALS`, sectionSubtitle: `Client’s Testimonials`, sectionTitlePara: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor eros. Donec vitae tortor lacus. Phasellus aliquam ante in maximus.`}"
+            x-data="{ sectionTitle: `TESTIMONIALS`, sectionSubtitle: `Client’s Testimonials`, sectionTitlePara: `Discover what our satisfied clients have to say about their experiences with Your Remote Business Solutions. These testimonials reflect the exceptional results and value we provide to businesses like yours.`}"
           >
             <include src="./partials/section-title.html" />
           </div>
@@ -584,26 +589,80 @@
                 <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
                   <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
                     <div>
-                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Devid Smith</h4>
-                      <p>Founter @democompany</p>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Maria .A, CEO</h4>
+                      <p>maria@rimmicrofinance.org</p>
                     </div>
                     <img class="" src="./images/user/user-01.svg" alt="User" />
                   </div>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris hendrerit, ligula sit amet cursus tincidunt, lorem sem elementum nisi, convallis fringilla ante nibh non urna.</p>
+                  <p>"Thanks to Fort Remote managing our finances remotely has never been easier. Their dedicated team of experts ensures our financial records are always up-to-date, allowing us to make informed decisions and focus on our core business. Their professionalism, responsiveness, and attention to detail have been instrumental in our success. We highly recommend Fort Remote for their exceptional remote bookkeeping services."</p>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
                   <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
                     <div>
-                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Jhon Abraham</h4>
-                      <p>Founter @democompany</p>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Z . Mahanyele, MD</h4>
+                      <p>abraham@uzuri.com</p>
                     </div>
                     <img class="" src="./images/user/user-02.svg" alt="User" />
                   </div>
 
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris hendrerit, ligula sit amet cursus tincidunt, lorem sem elementum nisi, convallis fringilla ante nibh non urna.</p>
+                  <p>"Thanks to Fort Remote, our financials are in great hands. Their remote bookkeeping services have been a vital asset to our business. With their expertise, we've achieved financial clarity and efficiency like never before. I highly recommend Fort Remote to anyone seeking top-notch remote bookkeeping services for their website."</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
+                  <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
+                    <div>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">MT Pangilinan., COO</h4>
+                      <p>panglian@woundhospital.ac.uk</p>
+                    </div>
+                    <img class="" src="./images/user/user-01.svg" alt="User" />
+                  </div>
+
+                  <p>"Choosing Fort Remote for our remote data entry needs was a smart decision. Their team's precision and dedication have improved our data accuracy and saved us valuable time. We're grateful for their seamless support. If you're seeking efficient remote data entry services, look no further than Fort Remote."</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                  <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
+                  <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
+                    <div>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Dr. David D.,Executive Head</h4>
+                      <p>david@alitech.io</p>
+                    </div>
+                    <img class="" src="./images/user/user-02.svg" alt="User" />
+                  </div>
+
+                  <p>"Kudos to Fort Remote for their dedication to data security. As a Learning institution, we needed a partner we could trust with sensitive information. Their remote data entry, and virtual customer care services have exceeded our expectations in every way. We couldn't have asked for a better partner."</p>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
+                  <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
+                    <div>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Patricia M., Managing Director </h4>
+                      <p>patrick@fmcg.info</p>
+                    </div>
+                    <img class="" src="./images/user/user-01.svg" alt="User" />
+                  </div>
+
+                  <p>"We were drowning in paperwork until we found Fort Remote. Their data entry services have revolutionized our data management processes. And their virtual customer care team? Exceptional! Our clients notice the difference in our support quality. Thank you, Fort Remote!“</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="bg-white rounded-lg shadow-solid-9 dark:shadow-none dark:bg-blacksection dark:border dark:border-strokedark p-9 pt-7.5">
+                  <div class="flex justify-between border-b border-stroke dark:border-strokedark pb-6 mb-7.5">
+                    <div>
+                      <h4 class="text-black dark:text-white text-metatitle3 mb-1.5">Dipak S.</h4>
+                      <p>dipack@dipatech.net</p>
+                    </div>
+                    <img class="" src="./images/user/user-02.svg" alt="User" />
+                  </div>
+
+                  <p>"Fort Remote has transformed our customer care operations. Their virtual customer care services have provided our customers with exceptional support around the clock. Their team's professionalism and dedication to our brand have been outstanding. We highly recommend Fort Remote for top-tier virtual customer care services.“</p>
                 </div>
               </div>
             </div>
@@ -791,16 +850,21 @@
               <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-semibold mb-12.5">Find us</h2>
 
               <div class="mb-7 5">
-                <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Our Loaction</h4>
-                <p>290 Maryam Springs 260, Courbevoie, Paris, France</p>
+                <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Our Location</h4>
+                <p>124 City Road, London, EC1V 2NX United Kingdom</p>
               </div>
               <div class="mb-7 5">
                 <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Email Address</h4>
-                <p><a href="#">yourmail@domainname.com</a></p>
+                <p><a href="#">sales@fortremote.pro</a></p>
               </div>
               <div>
                 <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">Phone Number</h4>
-                <p><a href="#">+009 42334 6343 843</a></p>
+                <p><a href="#">+44 121 790 1866</a></p>
+                <p><a href="#">+1 267-995-8208</a></p>
+              </div>
+              <div class="pt-2">
+                <h4 class="font-medium text-black dark:text-white text-metatitle3 mb-4">WhatsApp Number</h4>
+                <p><a href="#">+1 267-995-8208</a></p>
               </div>
             </div>
           </div>
@@ -814,7 +878,8 @@
           <!-- Section Title Start -->
           <div
             class="animate_top text-center mx-auto"
-            x-data="{ sectionTitle: `NEWS & BLOGS`, sectionSubtitle: `Latest News & Blogs`, sectionTitlePara: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor eros. Donec vitae tortor lacus. Phasellus aliquam ante in maximus.`}"
+            x-data="{ sectionTitle: `NEWS & BLOGS`, sectionSubtitle: `Latest News & Blogs`, sectionTitlePara: `Stay Informed with Our Latest News and Blogs
+Explore our insights on remote services, industry trends, and success stories.`}"
           >
             <include src="./partials/section-title.html" />
           </div>
