--- a/src/about-us.html
+++ b/src/about-us.html
@@ -23,7 +23,7 @@
 
 <main>
     <!-- ===== About us Section  Start ===== -->
-    <section id="features" class="py-20 lg:py-25 xl:py-30">
+    <section id="features" class="py-20 lg:py-25 xl:py-30 h-screen">
         <div class="mx-auto max-w-c-1315 px-4 md:px-8 xl:px-0">
             <!-- Section Title Start -->
             <div
