--- a/src/index.html
+++ b/src/index.html
@@ -306,11 +306,11 @@
                 <div class="md:w-1/2">
                   <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Efficient, Accurate, and Convenient Remote Bookkeeping.</h2>
                   <ul class="mb-5">
-                    <li class="w-11/12">Journal Entry and General Ledger Maintenance</li>
-                    <li class="w-11/12">Generating &  Recording Sales Invoices</li>
-                    <li class="w-11/12">Updating Deposits & Payments in the Cashbook</li>
-                    <li>Expense Tracking: We streamline expense tracking, making it easy to monitor and control costs.</li>
-                    <li>Accounts Receivable Management</li>
+                    <li class="py-1">Journal Entry and General Ledger Maintenance</li>
+                    <li class="py-1">Generating &  Recording Sales Invoices</li>
+                    <li class="py-1">Updating Deposits & Payments in the Cashbook</li>
+                    <li class="py-1">Expense Tracking: We streamline expense tracking, making it easy to monitor and control costs.</li>
+                    <li class="py-1">Accounts Receivable Management</li>
                   </ul>
                 </div>
                 <div class="hidden md:block md:w-1/2">
@@ -323,9 +323,18 @@
             <div x-show="featuresTab === 'tabTwo'">
               <div class="flex items-center gap-8 lg:gap-19">
                 <div class="md:w-1/2">
-                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Solid Has Cloud Data Save Options.</h2>
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies lacus non fermentum ultrices. Fusce consectetur le.</p>
-                  <p class="w-11/12">Nam id eleifend dui, id iaculis purus. Etiam lobortis neque nec finibus sagittis. Nulla ligula nunc egestas ut.</p>
+                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Your Success, Our Virtual Priority.</h2>
+<!--              =====UL Items ====-->
+                  <ul class="mb-5">
+                    <li class="py-1">Customer Support via Live Chat</li>
+                    <li class="py-1">Email Support</li>
+                    <li class="py-1">Social media support</li>
+                    <li class="py-1">Chatbots and AI-Powered Assistants</li>
+                    <li class="py-1">Ticketing Systems:</li>
+                    <li class="py-1">Multilingual Support</li>
+                    <li class="py-1">Escalation Procedures</li>
+
+                  </ul>
                 </div>
                 <div class="hidden md:block md:w-1/2">
                   <img src="./images/features/features-light-01.svg" alt="Features" class="dark:hidden" />
@@ -337,9 +346,18 @@
             <div x-show="featuresTab === 'tabThree'">
               <div class="flex items-center gap-8 lg:gap-19">
                 <div class="md:w-1/2">
-                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Solid Has Management And Collaboration.</h2>
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ultricies lacus non fermentum ultrices. Fusce consectetur le.</p>
-                  <p class="w-11/12">Nam id eleifend dui, id iaculis purus. Etiam lobortis neque nec finibus sagittis. Nulla ligula nunc egestas ut.</p>
+                  <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle2 font-bold mb-7">Precision Data Entry, Excellence Every Time</h2>
+                  <!--              =====UL Items ====-->
+                  <ul class="mb-5">
+                    <li class="py-1">Data Cleansing and Data Validation</li>
+                    <li class="py-1">Data Conversion</li>
+                    <li class="py-1">Online Data entry</li>
+                    <li class="py-1">Medical and healthcare data entry</li>
+                    <li class="py-1">Handwritten data entry</li>
+                    <li class="py-1">Real Estate Data Entry</li>
+                    <li class="py-1">Catalogue data entry</li>
+
+                  </ul>
                 </div>
                 <div class="hidden md:block md:w-1/2">
                   <img src="./images/features/features-light-01.svg" alt="Features" class="dark:hidden" />
@@ -674,16 +692,16 @@
       <!-- ===== Testimonials End ===== -->
 
       <!-- ===== Pricing Table Start ===== -->
-      <section class="pt-15 lg:pt-20 xl:pt-25 pb-20 lg:pb-25 xl:pb-30">
+    <!--  <section class="pt-15 lg:pt-20 xl:pt-25 pb-20 lg:pb-25 xl:pb-30">
         <div class="mx-auto max-w-c-1315 px-4 md:px-8 xl:px-0">
-          <!-- Section Title Start -->
+          &lt;!&ndash; Section Title Start &ndash;&gt;
           <div
             class="animate_top text-center mx-auto"
             x-data="{ sectionTitle: `PRICING PLANS`, sectionSubtitle: `Simple Pricing`, sectionTitlePara: `Lorem ipsum dolor sit amet, consectetur adipiscing elit. In convallis tortor eros. Donec vitae tortor lacus. Phasellus aliquam ante in maximus.`}"
           >
             <include src="./partials/section-title.html" />
           </div>
-          <!-- Section Title End -->
+          &lt;!&ndash; Section Title End &ndash;&gt;
         </div>
 
         <div class="mx-auto max-w-[1207px] px-4 md:px-8 xl:px-0 relative mt-15 xl:mt-20">
@@ -691,7 +709,7 @@
             <img src="./images/shape/shape-dotted-light.svg" alt="Dotted" class="dark:hidden" />
           </div>
           <div class="flex flex-wrap lg:flex-nowrap justify-center gap-7.5 xl:gap-12.5">
-            <!-- Pricing Item -->
+            &lt;!&ndash; Pricing Item &ndash;&gt;
             <div class="animate_top md:w-[45%] lg:w-1/3 group relative bg-white dark:bg-blacksection rounded-lg shadow-solid-10 dark:shadow-none border border-stroke dark:border-strokedark p-7.5 xl:p-12.5">
               <h3 class="text-black dark:text-white font-bold text-3xl xl:text-sectiontitle3 mb-7.5">$10 <span class="text-regular text-waterloo dark:text-manatee">/month</span></h3>
               <h4 class="text-black dark:text-white font-medium text-para2 mb-2.5">Small Pack</h4>
@@ -714,7 +732,7 @@
               </a>
             </div>
 
-            <!-- Pricing Item -->
+            &lt;!&ndash; Pricing Item &ndash;&gt;
             <div class="animate_top md:w-[45%] lg:w-1/3 group relative bg-white dark:bg-blacksection rounded-lg shadow-solid-10 dark:shadow-none border border-stroke dark:border-strokedark p-7.5 xl:p-12.5">
               <div class="absolute top-7.5 -right-3.5 -rotate-90 rounded-tl-full rounded-bl-full bg-primary font-medium text-white text-metatitle uppercase py-1.5 px-4.5">popular</div>
 
@@ -739,7 +757,7 @@
               </a>
             </div>
 
-            <!-- Pricing Item -->
+            &lt;!&ndash; Pricing Item &ndash;&gt;
             <div class="animate_top md:w-[45%] lg:w-1/3 group relative bg-white dark:bg-blacksection rounded-lg shadow-solid-10 dark:shadow-none border border-stroke dark:border-strokedark p-7.5 xl:p-12.5">
               <h3 class="text-black dark:text-white font-bold text-3xl xl:text-sectiontitle3 mb-7.5">$189 <span class="text-regular text-waterloo dark:text-manatee">/month</span></h3>
               <h4 class="text-black dark:text-white font-medium text-para2 mb-2.5">Large Pack</h4>
@@ -763,11 +781,11 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <!-- ===== Pricing Table End ===== -->
 
       <!-- ===== Contact Start ===== -->
-      <section id="support" class="px-4 md:px-8 2xl:px-0">
+    <!--  <section id="support" class="px-4 md:px-8 2xl:px-0">
         <div class="mx-auto max-w-c-1390 relative pt-10 lg:pt-15 xl:pt-20 px-7.5 lg:px-15 xl:px-20 overflow-hidden">
           <div class="absolute -z-1 rounded-lg left-0 top-0 w-full h-2/3 bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-[#24283E] dark:to-[#252A42]"></div>
           <div class="absolute -z-1 bottom-5 left-0 w-full h-1/3">
@@ -869,13 +887,13 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <!-- ===== Contact End ===== -->
 
       <!-- ===== Blog Start ===== -->
-      <section class="py-20 lg:py-25 xl:py-30">
+     <!-- <section class="py-20 lg:py-25 xl:py-30">
         <div class="mx-auto max-w-c-1315 px-4 md:px-8 xl:px-0">
-          <!-- Section Title Start -->
+          &lt;!&ndash; Section Title Start &ndash;&gt;
           <div
             class="animate_top text-center mx-auto"
             x-data="{ sectionTitle: `NEWS & BLOGS`, sectionSubtitle: `Latest News & Blogs`, sectionTitlePara: `Stay Informed with Our Latest News and Blogs
@@ -883,12 +901,12 @@ Explore our insights on remote services, industry trends, and success stories.`}
           >
             <include src="./partials/section-title.html" />
           </div>
-          <!-- Section Title End -->
+          &lt;!&ndash; Section Title End &ndash;&gt;
         </div>
 
         <div class="mx-auto max-w-c-1280 px-4 md:px-8 xl:px-0 mt-15 xl:mt-20">
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7.5 xl:gap-10">
-            <!-- Blog Item -->
+            &lt;!&ndash; Blog Item &ndash;&gt;
             <div class="animate_top bg-white dark:bg-blacksection rounded-lg shadow-solid-8 p-4 pb-9">
               <a href="#" class="block">
                 <img src="./images/blog/blog-01.png" alt="Blog" />
@@ -902,7 +920,7 @@ Explore our insights on remote services, industry trends, and success stories.`}
               </div>
             </div>
 
-            <!-- Blog Item -->
+            &lt;!&ndash; Blog Item &ndash;&gt;
             <div class="animate_top bg-white dark:bg-blacksection rounded-lg shadow-solid-8 p-4 pb-9">
               <a href="#" class="block">
                 <img src="./images/blog/blog-02.png" alt="Blog" />
@@ -916,7 +934,7 @@ Explore our insights on remote services, industry trends, and success stories.`}
               </div>
             </div>
 
-            <!-- Blog Item -->
+            &lt;!&ndash; Blog Item &ndash;&gt;
             <div class="animate_top bg-white dark:bg-blacksection rounded-lg shadow-solid-8 p-4 pb-9">
               <a href="#" class="block">
                 <img src="./images/blog/blog-03.png" alt="Blog" />
@@ -931,7 +949,7 @@ Explore our insights on remote services, industry trends, and success stories.`}
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
       <!-- ===== Blog End ===== -->
     </main>
     <!-- ===== Footer Start ===== -->
