--- a/src/index.html
+++ b/src/index.html
@@ -376,14 +376,14 @@
         <div
           class="mx-auto max-w-c-1390 py-22.5 xl:py-27.5 relative z-1 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
         >
-          <img src="./images/shape/shape-04.svg" alt="Man" class="absolute -top-25 -left-15 lg:left-0 -z-1" />
+<!--          <img src="./images/shape/shape-04.svg" alt="Man" class="absolute -top-25 -left-15 lg:left-0 -z-1" />-->
           <img src="./images/shape/shape-05.svg" alt="Doodle" class="absolute bottom-0 right-0 -z-1" />
           <img src="./images/shape/shape-dotted-light-02.svg" alt="Dotted" class="absolute top-0 left-0 -z-1 dark:hidden" />
           <img src="./images/shape/shape-dotted-dark-02.svg" alt="Dotted" class="absolute top-0 left-0 -z-1 hidden dark:block" />
 
           <div class="animate_top mx-auto text-center md:w-4/5 lg:w-2/3 xl:w-1/2 mb-12.5 lg:mb-17.5 px-4 md:px-0">
             <h2 class="font-bold text-black dark:text-white text-3xl xl:text-sectiontitle3 mb-4">Global Trust, Local Impact.</h2>
-            <p class="lg:w-11/12 mx-auto">Our unwavering commitment to excellence has earned the trust of countless companies worldwide. With a proven track record of delivering top-notch remote services, we've become the go-to partner for businesses seeking efficiency, quality, and growth. Join the ranks of satisfied clients who rely on our expertise to drive success on a global scale, while experiencing a local impact tailored to your unique needs. Choose Your Remote Business Solutions and elevate your business today.</p>
+            <p class="lg:w-11/12 mx-auto">"With a global track record of excellence, we're the trusted partner for efficient, quality-driven remote services. Join satisfied clients and elevate your business with Your Remote Business Solutions..</p>
           </div>
 
           <div class="flex flex-wrap justify-center gap-8 lg:gap-42.5">
@@ -483,30 +483,7 @@
       </section>
       <!-- ===== Integrations End ===== -->
 
-      <!-- ===== CTA Start ===== -->
-      <section class="py-20 lg:py-25 xl:py-30 px-4 md:px-8 2xl:px-0 overflow-hidden">
-        <div
-          class="mx-auto max-w-c-1390 px-7.5 md:px-12.5 xl:px-17.5 py-12.5 xl:py-0 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
-        >
-          <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">
-            <div class="animate_left md:w-[70%] lg:w-1/2">
-              <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Join With Us Today & Increase Your Productivity</h2>
-              <p>Unlock new levels of productivity by partnering with us. Our expert solutions are tailored to your needs, helping you achieve greater efficiency and success. Join our community of forward-thinking businesses today.</p>
-            </div>
-            <div class="animate_right lg:w-[45%]">
-              <div class="flex items-center justify-end xl:justify-between">
-                <img src="./images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />
-                <a href="signup.html" class="inline-flex items-center gap-2.5 font-medium text-white dark:text-black bg-black dark:bg-white rounded-full py-3 px-6">
-                  Sign up free
-                  <img src="./images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />
-                  <img src="./images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- ===== CTA End ===== -->
+
 
       <!-- ===== FAQ Start ===== -->
       <section class="pb-20 lg:pb-25 xl:pb-30 overflow-hidden">
@@ -690,6 +667,31 @@
         </div>
       </section>
       <!-- ===== Testimonials End ===== -->
+
+      <!-- ===== CTA Start ===== -->
+      <section class="py-20 lg:py-25 xl:py-30 px-4 md:px-8 2xl:px-0 overflow-hidden">
+        <div
+                class="mx-auto max-w-c-1390 px-7.5 md:px-12.5 xl:px-17.5 py-12.5 xl:py-0 rounded-lg bg-gradient-to-t from-[#F8F9FF] to-[#DEE7FF] dark:bg-gradient-to-t dark:from-transparent dark:to-transparent dark:bg-blacksection dark:stroke-strokedark"
+        >
+          <div class="flex flex-wrap md:flex-nowrap md:items-center md:justify-between gap-8 md:gap-0">
+            <div class="animate_left md:w-[70%] lg:w-1/2">
+              <h2 class="text-black dark:text-white text-3xl xl:text-sectiontitle4 font-bold mb-4 w-11/12">Join With Us Today & Increase Your Productivity</h2>
+              <p>Unlock new levels of productivity by partnering with us. Our expert solutions are tailored to your needs, helping you achieve greater efficiency and success. Join our community of forward-thinking businesses today.</p>
+            </div>
+            <div class="animate_right lg:w-[45%]">
+              <div class="flex items-center justify-end xl:justify-between">
+                <img src="./images/shape/shape-06.svg" alt="Saly" class="hidden xl:block" />
+                <a href="signup.html" class="inline-flex items-center gap-2.5 font-medium text-white dark:text-black bg-black dark:bg-white rounded-full py-3 px-6">
+                  Sign up free
+                  <img src="./images/icon/icon-arrow-dark.svg" alt="Arrow" class="dark:hidden" />
+                  <img src="./images/icon/icon-arrow-light.svg" alt="Arrow" class="hidden dark:block" />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===== CTA End ===== -->
 
       <!-- ===== Pricing Table Start ===== -->
     <!--  <section class="pt-15 lg:pt-20 xl:pt-25 pb-20 lg:pb-25 xl:pb-30">
